# ProtectRAG

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
datasets/: golden_v1.json
docs/: README.md  index.html
docs/css/: site.css
docs/js/: site.js
examples/: pr_agent_surface_samples.json  scan_pr_agent_samples.py
notebooks/: eval_dashboard.ipynb
src/protectrag/: __init__.py  async_api.py  callbacks.py  context.py  datasets.py  evals.py  ingest.py  llm.py  llm_cache.py  metrics.py  observability.py  retrieval.py  retry.py  scanner.py  semconv.py
src/protectrag/integrations/: __init__.py  fastapi.py  langchain.py  llamaindex.py
tests/: test_async_batch.py  test_callbacks.py  test_evals_injection.py  test_evals_report.py  test_expanded_scanner.py  test_golden_dataset.py  test_ingest_async.py  test_llm.py  test_llm_cache.py  test_retrieval.py  test_retry.py  test_scanner_early_exit.py  test_scanner_instruction_gaps.py  test_scanner_user_corpus.py
